# tg-mesh-bridge

./: .env.example  .gitignore  CLEANUP_REPORT.md  Makefile  README.md  SETUP.md  env.example  fix_chat_id.py  personal_config.txt  quick_restore_commands.txt  restore_personal_data_prompt.txt  test_improvements.py  test_message_format.py  test_mqtt.py  test_new_format.py  test_user.py  update_user.py
app/: Makefile  alembic.ini  pyproject.toml  requirements.txt  test_improvements.py
app/alembic/: env.py
app/alembic/versions/: 75203f7e12b0_init_schema.py  951b9daf128a_nodes_alias_position.py  be5f569b9fcf_add_user_label_to_node_model.py
app/src/bot/: healthcheck.py  main.py  states.py
app/src/bot/handlers/: devices.py  fallback.py  help.py  menu.py  nearby.py  send_nearby.py  send_to_node.py  status.py
app/src/bot/keyboards/: __init__.py  menu.py
app/src/bot/middlewares/: rate_limit.py  ratelimit.py
app/src/bot/services/: users.py
app/src/bridge/: consumer.py  mqtt.py  repo.py
app/src/common/: config.py  db.py  i18n.py  models.py  ratelimit.py  shortcode.py  state.py
app/tests/unit/: test_parse_tg_prefix.py  test_shortcode.py
docs/: README.md  botfather_commands.md  device_add_flow_analysis.md  device_management_fixes.md  fallback_handler_configuration.md  final_cleanup_report.md  input_states_ui_improvement.md  mesh_to_tg_improvements.md  message_sending_convenience.md  mqtt_publisher_improvements.md  node_id_input_validation.md  remove_reply_keyboard_sources.md  repo_functions_verification.md  router_configuration.md  terminology_unification.md  (+1 more)
(+17 files in other folders)
